...
                  testID="library-search-button"
                  onPress={handleSearchPress}
                >
                  <Search color={white} />
                </FadeOutScaleDown>
                <FadeOutScaleDown
                  testID="library-create-button"
                  onPress={handlePresentModalPress}
                >
                  <Plus color={white} />
                </FadeOutScaleDown>
              </HStack>
            </HStack>
...
