...
                        <Box className="size-6 rounded-full border-2 border-gray-200 items-center justify-center">
                          <ArrowDown size={16} color={gray200} />
                        </Box>
                      </FadeOutScaleDown>
                    ))}
                  <FadeOutScaleDown
                    testID="playlist-menu-button"
                    onPress={handlePresentModalPress}
                  >
                    <EllipsisVertical color={white} />
                  </FadeOutScaleDown>
                </HStack>
                <HStack className="items-center gap-x-4">
...
