...
              {isFavorite
                ? t("app.podcasts.unsubscribe")
                : t("app.podcasts.subscribe")}
            </Text>
          </FadeOutScaleDown>
          <FadeOutScaleDown
            testID="podcast-channel-menu-button"
            onPress={handlePresentModalPress}
          >
            <EllipsisVertical color={white} />
          </FadeOutScaleDown>
        </HStack>
      </VStack>
...
