...
      <HStack className="items-center justify-between mb-4">
        <HStack className="items-center flex-1">
          {recentSearch.coverArt ? (
            <Image
              source={{ uri: artworkUrl(recentSearch.coverArt) }}
              className="w-16 h-16 rounded-md aspect-square"
              alt="Recent search cover"
            />
          ) : (
            <Box
              className={cn(
                "w-16 h-16 aspect-square rounded-md bg-primary-600 items-center justify-center",
                {
...
