...
                  onChangeText={field.handleChange}
                  onBlur={field.handleBlur}
                  enterKeyHint="search"
                  onSubmitEditing={handleOnSumbit}
                />
                <InputSlot
                  testID="search-clear-button"
                  className="pr-3"
                  onPress={handleSearchClearPress}
                >
                  <InputIcon as={X} size="xl" />
                </InputSlot>
              </Input>
...
